version as 0.1.0 for deployments
